fix for spinner on map keyword field, and fix for comments alignment in feed

--- a/theme/snapr/css/elements.less
+++ b/theme/snapr/css/elements.less
@@ -721,14 +721,17 @@
 }
 
 .loading{
-    .ui-input-search{
-        .ui-input-clear {
-            .ui-icon-delete{
-                .spinner();
-                .spin();
-            }
-        }
-    } 
+    .search-header{
+        .ui-input-search{
+               .ui-input-clear {
+                   .ui-icon-delete{
+                       .spinner();
+                       .spin();
+                   }
+               }
+           }
+    }
+   
 }
 
 
