--- a/theme/snapr/css/pages.less
+++ b/theme/snapr/css/pages.less
@@ -487,13 +487,18 @@
             padding:0;
              .ui-link-inherit{
                     padding: 0 0 @padding-element-inset 0!important;
-                    white-space: normal;
-                    font-weight: normal;
-                    font-family: @txt-font-base;
-                    color: @color-txt-medium-on-light;
+                    display: inline-block;
+                    white-space: normal;                    
                 }
             .ui-icon-arrow-r{
                 display: none;
+            }
+            .comment,
+            .like-text{
+                white-space: normal;
+                font-weight: normal;
+                font-family: @txt-font-base;
+                color: @color-txt-medium-on-light;
             }
         }
 
